userChrome/tabmenu: fix tiny height/jumping around (MR 19)
Apply a similar hack to the "all tabs" menu, as the appMenu has, so it
gets a proper height and doesn't jump above or below the "all tabs"
button, depending on the keyboard being displayed or not. With this
hack, it stays consistently above the button.

--- a/src/userChrome/tabmenu.css
+++ b/src/userChrome/tabmenu.css
@@ -24,4 +24,38 @@
     #allTabsMenu-tabsSeparator {
         display: none;
     }
+
+    /* Similar hack to what's in appMenu.css to properly spawn the "all tabs"
+     * popup above the navigation menu */
+    #customizationui-widget-panel {
+        /* Further up than appmenu, because the "all tabs" button that spawns
+         * this menu is above the hamburger button that spawns the regular
+         * menu. */
+        margin-top: -360px !important;
+        height: 320px;
+        max-height: 320px;
+    }
+
+    #allTabsMenu-allTabsView vbox.panel-subview-body {
+        /* Use the whole height */
+        height: 300px !important;
+        max-height: 300px !important;
+        /* When messing around with tabs, it gets into a state where it does
+         * not use the whole height anymore, it becomes a tiny window. Removing
+         * this attribute fixes it. */
+        -moz-box-flex: initial !important;
+    }
+
+    #allTabsMenu-allTabsView vbox.panel-subview-body:first-child {
+        /* the allTabsMenu has a vbox.panel-subview-body inside another one.
+         * With -moz-box-flex: initial, it will show a scroll bar in each, but
+         * we only want one scrollbar. */
+        overflow-y: hidden !important;
+    }
+
+    #allTabsMenu-multiView box.panel-viewstack {
+        /* Use the whole height */
+        height: calc(100vh - 100px) !important;
+        max-height: calc(100vh - 100px) !important;
+    }
 }
